--- a/app/assets/templates/post_form.jst.ejs
+++ b/app/assets/templates/post_form.jst.ejs
@@ -1,12 +1,12 @@
 <form accept-charset="utf-8">
-  <label for="post_title">Post Title</label>
+  <label for="post_title">Title</label>
   <input type="text" name="post[title]"
-         value="<%= post.escape("title") %>" id="post_title">
+         value="<%= attrs.title %>" id="post_title">
   <br />
 
-  <label for="post_body">Post Body</label>
+  <label for="post_body">Body</label>
   <input type="text" name="post[body]"
-         value="<%= post.escape("body") %>" id="post_body">
+         value="<%= attrs.body %>" id="post_body">
 
   <p><input type="submit" value="Post!"></p>
 </form>
