--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,9 @@
-<div class='content'>
+<div class='container sidebar'></div>
 
-</div>
+<div class='container content'></div>
 
 <script type="text/javascript" charset="utf-8">
   $(function(){
-    App.initialize($('.content'));
+    App.initialize($('.sidebar'), $('.content'));
   })
 </script>
