--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -2,4 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+html, body, .container {height:100%;}
+
+.container {
+  float:left
+}
+
+.sidebar {
+  border-right:solid black 2px;
+  width:200px;
+}
+
 .errors {font-weight:bold; color:red;}
+
+#post_title {
+  font-family:serif;
+  font-weight:bold;
+  font-size:1.5em;
+}
+
+#post_body {
+  font-family:serif;
+  font-size:1em;
+}
